--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: base
 title: Code More
+description: Code More - сайт о программировании
 ---
 
 <link rel="stylesheet" href="css/index.css">
