--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ description: Code More - сайт о программировании
 <div class="container">
     <div class="content-container">
 
-        <div class="code-more">Code More!</div>
+        <h1 class="code-more">Code More!</h1>
 
         <!-- Разделы -->
         <ul class="nav nav-pills nav-justified index-sections">
