--- a/_posts/experimental/2020-02-23-logics.html
+++ b/_posts/experimental/2020-02-23-logics.html
@@ -3,6 +3,7 @@ layout: post
 title: Решение логических задач
 author: Valentin Gubarev
 section: experimental
+description: Решение логического уравнения
 ---
 
 Для какого целого наименьшего неотрицательного числа A, выражение
