--- a/_posts/experimental/2019-12-07-prime.html
+++ b/_posts/experimental/2019-12-07-prime.html
@@ -3,6 +3,7 @@ layout: post
 title: Факторизация чисел
 author: Valentin Gubarev
 section: experimental
+description: Факторизация числа, разложение на простые множители
 ---
 
 <br>Введите натуральное число [2,10<sup>15</sup>) без ведущих нулей
