--- a/_posts/experimental/2017-07-11-random.html
+++ b/_posts/experimental/2017-07-11-random.html
@@ -3,6 +3,7 @@ layout: post
 title: Генерация случайных последовательностей символов
 author: Valentin Gubarev
 section: experimental
+description: Генерация псевдослучайных последовательностей, генерация паролей
 ---
 
 <script src="/js/random.js"></script>
