--- a/_posts/experimental/2015-06-07-fourier_transform.html
+++ b/_posts/experimental/2015-06-07-fourier_transform.html
@@ -3,6 +3,7 @@ layout: post
 title: web audio API
 author: Valentin Gubarev
 section: experimental
+description: Генерация DTMF, смешивание синусоидальных сигналов
 ---
 
 <link rel="stylesheet" href="/css/styles_experimental.css">
