--- a/_posts/experimental/2015-01-13-matrix_lcd.html
+++ b/_posts/experimental/2015-01-13-matrix_lcd.html
@@ -3,6 +3,7 @@ layout: post
 title: LCD-дисплей
 author: Valentin Gubarev
 section: experimental
+description: Вывод текста на LCD-дисплей
 ---
 	
 <script>
