--- a/_posts/experimental/2014-10-09-l-systems.html
+++ b/_posts/experimental/2014-10-09-l-systems.html
@@ -3,6 +3,7 @@ layout: post
 title: Системы Линденмайера (L-Системы)
 author: Alexey Nurgaliev
 section: experimental
+description: Фрактальная геометрия, шаблоны фракталов, система Линденмайера, L-Системы, аксиомы и правила создания фракталов
 ---
 
 {% raw %}
