--- a/_posts/experimental/2014-06-06-three-js.html
+++ b/_posts/experimental/2014-06-06-three-js.html
@@ -3,6 +3,7 @@ layout: post
 title: Пример WebGL анимации с Three.JS
 author: Alexey Nurgaliev, Gubarev Valentin
 section: experimental
+description: WebGL анимация с  применением библиотеки three.js, вращающиеся кубики
 ---
 
 <script src="//cdnjs.cloudflare.com/ajax/libs/three.js/r67/three.min.js"></script>
