--- a/_posts/experimental/2014-05-03-verlet.html
+++ b/_posts/experimental/2014-05-03-verlet.html
@@ -3,6 +3,7 @@ layout: post
 title: Симуляция ткани (JS+Canvas)
 author: Alexey Nurgaliev
 section: experimental
+description: Симуляция ткани на canvas, продвинутая физика
 ---
 
 <link rel="stylesheet" href="/css/fractal.css">
