--- a/_posts/experimental/2014-04-11-dynamic-canvas.html
+++ b/_posts/experimental/2014-04-11-dynamic-canvas.html
@@ -3,6 +3,7 @@ layout: post
 title: Динамическое изменение canvas
 author: Alexey Nurgaliev
 section: experimental
+description: Круги на канвасе, круги на canvas, прозрачные круги на canvas
 ---
 
 <link rel="stylesheet" href="/css/canvas.css">
