--- a/_posts/experimental/2014-04-11-canvas-animation.html
+++ b/_posts/experimental/2014-04-11-canvas-animation.html
@@ -3,6 +3,7 @@ layout: post
 title: Анимация на canvas
 author: Alexey Nurgaliev
 section: experimental
+description: Физика падающих шариков, анимация на canvas
 ---
 
 <link rel="stylesheet" href="/css/canvas.css">
