--- a/_posts/experimental/2014-04-09-fern.html
+++ b/_posts/experimental/2014-04-09-fern.html
@@ -3,6 +3,7 @@ layout: post
 title: Лист папоротника на canvas
 author: Alexey Nurgaliev
 section: experimental
+description: Фрактальная геометрия, лист папоротника на canvas
 ---
 
 <link rel="stylesheet" href="/css/fractal.css">
