--- a/mathematiques/achievments/index.html
+++ b/mathematiques/achievments/index.html
@@ -1,6 +1,7 @@
 ---
 layout: page-base
 title: Достижения
+section: mathematiques
 ---
 
 <link rel="stylesheet" href="/vendor/lightbox/lightbox.css">
@@ -42,7 +43,7 @@ title: Достижения
     });
 </script>
 
-<h1>{{ page.title }}</h1>
+{% include post-title.html %}
 
 <h2>Международный чемпионат математических и логических игр</h2>
 <div id="math-logic" class="mb-5"></div>
