--- a/mathematiques/photo/index.html
+++ b/mathematiques/photo/index.html
@@ -1,6 +1,7 @@
 ---
 layout: page-base
 title: Фотографии
+section: mathematiques
 ---
 
 <link rel="stylesheet" href="/vendor/lightbox/lightbox.css">
@@ -21,6 +22,6 @@ title: Фотографии
     });
 </script>
 
-<h1>{{ page.title }}</h1>
+{% include post-title.html %}
 
 <div id="gallery" class="mb-3"></div>
