--- a/pskov/achievments/index.html
+++ b/pskov/achievments/index.html
@@ -1,6 +1,7 @@
 ---
 layout: page-base
 title: Достижения
+section: pskov
 ---
 
 <link rel="stylesheet" href="/vendor/lightbox/lightbox.css">
@@ -172,7 +173,7 @@ title: Достижения
     });
 </script>
 
-<h1>{{ page.title }}</h1>
+{% include post-title.html %}
 
 <h2>Сертификаты ACM ICPC</h2>
 <div id="acm" class="mb-5"></div>
