--- a/pskov/photo/index.html
+++ b/pskov/photo/index.html
@@ -1,6 +1,7 @@
 ---
 layout: page-base
 title: Фотографии
+section: pskov
 ---
 
 <link rel="stylesheet" href="/vendor/lightbox/lightbox.css">
@@ -49,6 +50,6 @@ title: Фотографии
     });
 </script>
 
-<h1>{{ page.title }}</h1>
+{% include post-title.html %}
 
 <div id="gallery" class="mb-3"></div>
