правка страниц под новые шаблоны

--- a/_posts/2015-06-21-economic.html
+++ b/_posts/2015-06-21-economic.html
@@ -13,7 +13,7 @@ author: Valentin Gubarev
 	<h3> Задание 1 </h3>
 	<p> Найти оптимальное решение транспортной задачи. Необходимо, чтобы потребность третьего пункта удовлетворялась полностью </p>
 	
-	<table border='1' cols='4'>
+	<table class="table table-bordered" cols='4'>
 		<tr>
 			<th rowspan='2'> Si </th>
 			<th colspan='4'> Pj </th>
@@ -50,7 +50,7 @@ author: Valentin Gubarev
 	<h3> Задание 2 </h3>
 	<p> Решить транспортную задачу. Заданы мощности поставщиков ai(i=1,2,3), ёмкости потребителей bj(j=1,2,3) и матрица затрат времени перевозок единицы продукции от каждого поставщика каждому потребителю. Требуется найти план перевозок, при котором суммарные транспортные затраты времени наименьшие. </p>
 	
-	<table border='1' cols='4'>
+	<table class="table table-bordered" cols='4'>
 		<tr>
 			<th rowspan='2'> ai </th>
 			<th colspan='4'> bj </th>
@@ -94,7 +94,7 @@ author: Valentin Gubarev
 	<br>
 	<p> Второй этап - поиск опорного плана методом "наименьшей стоимости". Среди всех стоимостей наименьшей является - 3. Для этой величины ai = 25 (см. строку) и bj = 12 (см. столбец). min(25,12) = 12, вычтем эту величину из 25 и 12. Получим новую таблицу. </p>
 	
-	<table border='1' cols='4'>
+	<table class="table table-bordered" cols='4'>
 		<tr>
 			<th rowspan='2'> ai </th>
 			<th colspan='4'> bj </th>
@@ -131,7 +131,7 @@ author: Valentin Gubarev
 	<br>
 	<p> Повторим этап. Среди всех стоимостей наименьшей является - 4. Для этой величины ai = 25 (см. строку) и bj = 12 (см. столбец). min(25,12) = 12, вычтем эту величину из 25 и 12. Получим новую таблицу. </p>
 	
-	<table border='1' cols='4'>
+	<table class="table table-bordered" cols='4'>
 		<tr>
 			<th rowspan='2'> ai </th>
 			<th colspan='4'> bj </th>
@@ -168,7 +168,7 @@ author: Valentin Gubarev
 	<br>
 	<p> И снова повторим этап. Среди всех стоимостей наименьшей является - 5. Для этой величины ai = 13 (см. строку) и bj = 16 (см. столбец). min(13,16) = 13, вычтем эту величину из 13 и 16. Получим новую таблицу. В этом случае нулю равна величина ai, поэтому вычёркиваем строку. </p>
 	
-	<table border='1' cols='4'>
+	<table class="table table-bordered" cols='4'>
 		<tr>
 			<th rowspan='2'> ai </th>
 			<th colspan='4'> bj </th>
@@ -205,7 +205,7 @@ author: Valentin Gubarev
 	<br>
 	<p> Повторим этап. Среди всех стоимостей наименьшей является - 7. Для этой величины ai = 13 (см. строку) и bj = 20 (см. столбец). min(13,20) = 13, вычтем эту величину из 13 и 20. Получим новую таблицу. В этом случае нулю равна величина ai, поэтому вычёркиваем строку. </p>
 	
-	<table border='1' cols='4'>
+	<table class="table table-bordered" cols='4'>
 		<tr>
 			<th rowspan='2'> ai </th>
 			<th colspan='4'> bj </th>
@@ -242,7 +242,7 @@ author: Valentin Gubarev
 	<br>
 	<p> Этап 2 можно повторить ещё два раза, но смысла нет, так как осталась единственная строка и необходимо удовлетворить все оставшиеся потребности. </p>
 	
-	<table border='1' cols='4'>
+	<table class="table table-bordered" cols='4'>
 		<tr>
 			<th rowspan='2'> ai </th>
 			<th colspan='4'> bj </th>
@@ -279,7 +279,7 @@ author: Valentin Gubarev
 	<br>
 	<p> Подсчитав количество прочерков в таблице и убедившись, что их количество равно m+n-1, где m - количество столбцов, n - количество строк, считаем, что найден опорный невырожденный план . </p>
 	
-	<table border='1' cols='4'>
+	<table class="table table-bordered" cols='4'>
 		<tr>
 			<th rowspan='2'> ai </th>
 			<th colspan='4'> bj </th>
@@ -390,7 +390,7 @@ author: Valentin Gubarev
 	<p> Найти кратчайший путь от вершины х0 до всех остальных вершин графа. Граф описывается перечнем всех своих дуг xixj и их длинами lij. Дуга xixj кратко обозначается парой чисел i, j, длина lij задаётся одним числом. Так, например, дуга x3x5 обозначается парой чисел 3,5 и т.п. </p>
 	<p> Данные заданы в таблице. Верхняя строка содержит перечень дуг. Строчка таблицы содержит длины дуг номера которых указаны в верхней строке. </p>
 
-	<table border='1' cols='16'>
+	<table class="table table-bordered" cols='16'>
 		<tr>
 			<th width='40'> uij </th>
 			<td width='40'> 0,1 </td>
@@ -434,7 +434,7 @@ author: Valentin Gubarev
 	<h3> Задание 4 </h3>
 	<p> Необходимо составить сетевой график и определить минимальное время (в днях) выполнения производственного задания. Проследить длиннейшую технологическую цепочку и в двух-трёх случаях указать, какие работы и на сколько могут быть ускорены для сокращения времени выполнения всего задания. Продолжительности работ и последжовательность их выполнения заданы в таблице (для каждой работы указано, после окончания каких работ может быть начато её выполнение). Вместо названий работы задаются условно их номерами. </p>
 
-	<table border='1' cols='11'>
+	<table class="table table-bordered" cols='11'>
 		<tr>
 			<th width='100'> Работа </th>
 			<td width='40'> 1 </td>
@@ -511,7 +511,7 @@ author: Valentin Gubarev
 	<h3> Задание 5 </h3>
 	<p> Найти оптимальную стратегию и цену игры. Сделать проверку, если дана матрица игры А. </p>
 
-	<table border='1' cols='4'>
+	<table class="table table-bordered" cols='4'>
 		<tr>
 			<td width='40'> 5 </td>
 			<td width='40'> -3 </td>
