--- a/_posts/experimental/2014-01-12-interval-tree.html
+++ b/_posts/experimental/2014-01-12-interval-tree.html
@@ -140,12 +140,12 @@ section: experimental
 </script>
 
 <p>
-    <button type="button" class="btn btn-default" onclick="go(-1)">Убрать вершину</button>
+    <button type="button" class="btn btn-outline-secondary" onclick="go(-1)">Убрать вершину</button>
     <input id="cnt_list" type="text" value="10" class="form-control" style="display:inline-block; width: 50px">
-    <button type="button" class="btn btn-default" onclick="go(+1)">Добавить вершину</button>
+    <button type="button" class="btn btn-outline-secondary" onclick="go(+1)">Добавить вершину</button>
 </p>
 <p>
-    <button type="button" class="btn btn-default" onclick="go(0)">Нарисовать дерево</button>
+    <button type="button" class="btn btn-outline-secondary" onclick="go(0)">Нарисовать дерево</button>
 </p>
 
 <script type="text/javascript">
