--- a/_posts/experimental/2014-04-11-fern-raphael.html
+++ b/_posts/experimental/2014-04-11-fern-raphael.html
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: post-legacy
 title: Лист папоротника на Raphaël
 author: Alexey Nurgaliev
 section: experimental
@@ -8,7 +8,7 @@ section: experimental
 <link rel="stylesheet" href="/css/fractal.css">
 <link rel="stylesheet" href="/css/fern-raphael.css">
 
-<script src="//yandex.st/raphael/2.1.0/raphael.min.js"></script>
+<script src="/vendor/raphael-2.1.0/raphael.min.js"></script>
 <script src="/js/fractal/fractal.js"></script>
 <script src="/js/fractal/fern-raphael.js"></script>
 
