--- a/_posts/experimental/2014-06-06-three-js.html
+++ b/_posts/experimental/2014-06-06-three-js.html
@@ -1,12 +1,12 @@
 ---
-layout: post
+layout: post-legacy
 title: Пример WebGL анимации с Three.JS
 author: Alexey Nurgaliev, Gubarev Valentin
 section: experimental
 description: WebGL анимация с  применением библиотеки three.js, вращающиеся кубики
 ---
 
-<script src="//cdnjs.cloudflare.com/ajax/libs/three.js/r67/three.min.js"></script>
+<script src="/vendor/three.js-r67/three.min.js"></script>
 <script src="/js/experimental/webgl.js"></script>
 
 <div id="output" style="width: 400px; height: 400px; margin: 0 auto;"></div>
