--- a/_posts/experimental/2019-12-07-prime.html
+++ b/_posts/experimental/2019-12-07-prime.html
@@ -10,7 +10,7 @@ description: Факторизация числа, разложение на пр
 <input type='text' value='2' style='font-family:monospace' size='15em' maxlength='15' id='number'></input>
 <input type='button' value='Факторизовать' onClick='go()'></input>
 <br><br>
-<table id='table' style='white-space:pre-wrap' border='1px'>
+<table id='table' class="table table-bordered" style='white-space:pre-wrap'>
 </table>
 		
 <script>
