--- a/_posts/experimental/2020-02-23-logics.html
+++ b/_posts/experimental/2020-02-23-logics.html
@@ -26,7 +26,7 @@ description: Решение логического уравнения
 <input type='button' value='Найти решение' onClick='go()'></input>
 <br><br>
 
-<table id='table' style='white-space:pre-wrap' border='1px'>
+<table id='table' class="table table-bordered" border='1px'>
 </table>
 		
 <script>
