--- a/mathematiques/achievments/index.html
+++ b/mathematiques/achievments/index.html
@@ -1,5 +1,5 @@
 ---
-layout: page-base
+layout: post-simple
 title: Достижения
 section: mathematiques
 ---
@@ -42,8 +42,6 @@ section: mathematiques
         addImages('gratitude', gratitude);
     });
 </script>
-
-{% include post-title.html %}
 
 <h2>Международный чемпионат математических и логических игр</h2>
 <div id="math-logic" class="mb-5"></div>
