--- a/mathematiques/index.html
+++ b/mathematiques/index.html
@@ -1,10 +1,8 @@
 ---
-layout: page-base
+layout: post-simple
 title: Международный чемпионат математических и логических игр
 section: mathematiques
 ---
-
-{% include post-title.html %}
 
 <!-- Разделы -->
 <div class="mb-5 text-center">
