--- a/mathematiques/photo/index.html
+++ b/mathematiques/photo/index.html
@@ -1,5 +1,5 @@
 ---
-layout: page-base
+layout: post-simple
 title: Фотографии
 section: mathematiques
 ---
@@ -21,7 +21,5 @@ section: mathematiques
         addImages('gallery', gallery);
     });
 </script>
-
-{% include post-title.html %}
 
 <div id="gallery" class="mb-3"></div>
