--- a/pskov/achievments/index.html
+++ b/pskov/achievments/index.html
@@ -1,5 +1,5 @@
 ---
-layout: page-base
+layout: post-simple
 title: Достижения
 section: pskov
 ---
@@ -172,8 +172,6 @@ section: pskov
 		addImages('school', school);
     });
 </script>
-
-{% include post-title.html %}
 
 <h2>Сертификаты ACM ICPC</h2>
 <div id="acm" class="mb-5"></div>
