--- a/pskov/index.html
+++ b/pskov/index.html
@@ -1,10 +1,8 @@
 ---
-layout: page-base
+layout: post-simple
 title: Олимпиадное программирование в Псков ГУ
 section: pskov
 ---
-
-{% include post-title.html %}
 
 <!-- Разделы -->
 <div class="mb-5 text-center">
