--- a/pskov/photo/index.html
+++ b/pskov/photo/index.html
@@ -1,5 +1,5 @@
 ---
-layout: page-base
+layout: post-simple
 title: Фотографии
 section: pskov
 ---
@@ -49,7 +49,5 @@ section: pskov
         addImages('gallery', gallery);
     });
 </script>
-
-{% include post-title.html %}
 
 <div id="gallery" class="mb-3"></div>
