--- a/pskov/index.html
+++ b/pskov/index.html
@@ -47,7 +47,7 @@ section: pskov
                 <h3>Регистрация</h3>
                 <p>
                     Для участия необходимо заранее зарегистрироваться
-                    в ауд. ПИШ-222 (ул. Льва Толстого, д. 4, корп. 2),
+                    в ауд. ПИШ-222 (ул. Льва Толстого, д. 4, корп. 2)
                     или на е-mail <nobr><a href="mailto:kafikt@pskgu.ru">kafikt@pskgu.ru</a></nobr>,
                     или по телефону <nobr><a href="tel:201699">20-16-99</a>, доб. 581</nobr>.
                 </p>
